<resources>
    <string name="app_name">福建省国土资源移动执法监察系统</string>
    <string name="app_name_abs">福建国土移动执法监察</string>
    <string name="dci_appid">APP000000009D002</string>
    <string name="cn_bvlayer">基础地图</string>
    <string name="cn_rslayer">影像地图</string>
    <string name="cn_gettinglocation">正在获取当前位置 。。。</string>
    <string name="cn_prompt">提示</string>
    <string name="cn_gpsoff">当前设备没开启GPS定位</string>
    <string name="cn_opengps">开启定位</string>
    <string name="cn_cancellocation">取消定位</string>
    <string name="cn_length">长度</string>
    <string name="cn_area">面积</string>
    <string name="cn_photo">照片</string>
    <string name="cn_tape">录音</string>
    <string name="cn_vedio">视频</string>
    <string name="cn_new">新建</string>
    <string name="cn_info_edit">信息编辑</string>
    <string name="cn_tomeasure">点击地图测量</string>
    <string name="cn_resetservice">重设服务地址</string>
    <string name="cn_typeaccount">用户名/手机号</string>
    <string name="cn_type_curpassword">输入当前密码</string>
    <string name="cn_type_newpassword">输入新密码</string>
    <string name="cn_retype_newpassword">再次输入新密码</string>
    <string name="cn_modify">修改</string>
    <string name="cn_typepassword">密码</string>
    <string name="cn_islogin">正在登录,请稍候 。。。</string>
    <string name="cn_saveing">正在保存，请稍候 。。。</string>
    <string name="cn_sendding">正在发送，请稍候 。。。</string>
    <string name="cn_dealing">正在处理，请稍候 。。。</string>
    <string name="cn_apply_returning">正在申请退回，请稍候 。。。</string>
    <string name="cn_returning">正在退回，请稍候 。。。</string>
    <string name="cn_login">登录</string>
    <string name="cn_nonetwork">没有网络连接,请检查网络设置</string>
    <string name="cn_defadmincode">350000</string>
    <string name="cn_redlinegather">红线采集</string>
    <string name="cn_redlinedisplay">查看红线</string>
    <string name="cn_surveynote">调查笔录</string>
    <string name="cn_casedetail">案件详情</string>
    <string name="cn_nodata">没有数据</string>
    <string name="cn_qd_bz">若当前位置与实际情况不符，请使用“手动签到”！</string>
    <string name="cn_parties">当事人</string>
    <string name="cn_clues_source">线索来源</string>
    <string name="cn_admin">所在村居</string>
    <string name="cn_sign">签到</string>
    <string name="cn_site">地址签到</string>
    <string name="en_text">TEST</string>
    <string name="en_menuindex">menu_index</string>
    <string name="en_large">large</string>
    <string name="en_name">large</string>
    <string name="en_password">large</string>
    <string name="en_small">small</string>
    <string name="sqm">m²</string>
    <string name="mu">亩</string>
    <string name="en_fcb_not_realize">activity not realize IDrawerFragmentActivityHandle</string>
    <string name="txt_en_uuid">uuid</string>
    <string name="txt_en_uuid2">uuid2</string>
    <string name="txt_en_appid">appid</string>
    <string name="txt_en_userid">userid</string>
    <string name="txt_en_contact">contack</string>
    <string name="txt_en_content">content</string>
    <string name="txt_en_token">token</string>
    <string name="txt_en_model">model</string>
    <string name="txt_en_os">os</string>
    <string name="txt_en_crack">crack</string>
    <string name="txt_en_appversion">appversion</string>
    <string name="txt_en_trail">trail</string>
    <string name="txt_en_type">type</string>
    <string name="txt_en_lat">lat</string>
    <string name="txt_en_long">long</string>
    <string name="format_last_signin">最近签到\n%1$s</string>
    <string name="current_version">当前版本</string>
    <string name="over_case">已办结</string>
    <string name="not_over_case">未办结</string>
    <string name="enter_caseid">输入案件编号</string>
    <string name="tab_inspect">信息核查</string>
    <string name="tab_patrol">核查处置</string>
    <string name="tab_case">上报信息</string>
    <string name="newlog">新建日志</string>
    <string name="idsearch">编号查询</string>
    <string name="snapresult">抽查结果</string>
    <string name="cancel">取消</string>
    <string name="report">上报</string>
    <string name="save">保存</string>
    <string name="send">发送 </string>
    <string name="modify">修改</string>
    <string name="request">获取</string>
    <string name="conformit">合格</string>
    <string name="non_conformit">不合格</string>
    <string name="response">开启响应</string>
    <string name="title_user_info">用户信息</string>
    <string name="apply_reback">申请退回</string>
    <string name="deal_with_apply">处理申请</string>
    <string name="reback">退回</string>
    <string name="fujian">福建省</string>
    <string name="app_rename">国土资源移动执法监察系统</string>
    <string name="waitting">请稍候...</string>
    <string name="set_serviceuri">修改服务地址</string>
    <string name="reset_serviceuri">恢复默认</string>
    <string name="new_serviceuri">新的服务地址</string>
    <string name="is_loading">正在加载,请稍候...</string>
    <string name="userinfo">用户信息</string>
    <string name="conmitanalyze">提交核查</string>
    <string name="title_case_info">案件详情</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="pull_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载…</string>
    <string name="no_more">没有更多可加载了...</string>
    <string name="mitem_case">巡查上报</string>
    <string name="mitem_inspect2">快速处置</string>
    <string name="mitem_inspect3">卫片核查</string>
    <string name="mitem_track">已办工作</string>
    <string name="mitem_track2">工作详情</string>
    <string name="mitem_supervise">监督检查</string>
    <string name="mitem_patolsign">巡查签到</string>
    <string name="mitem_inspect">案件核查</string>
    <string name="mitem_appear">案件上报</string>
    <string name="mitem_survey">案件调查</string>
    <string name="mitem_mapview">地图浏览</string>
    <string name="mitem_faceback">意见反馈</string>
    <string name="mitem_about">关于</string>
    <string name="mitem_mapup">地图更新</string>
    <string name="mitem_mineral_log">巡查上报</string>
    <string name="mitem_mapanalyze">即时查</string>
    <string name="mitem_statistics">统计分析</string>
    <string name="mitem_mineral_hc">案件核查</string>
    <string name="mitem_mineral_track">已办工作</string>
    <string name="mitem_law">法律法规</string>
    <string name="i_f1">线索来源：</string>
    <string name="i_f2">用地主体类别：</string>
    <string name="i_f3">主体名称：</string>
    <string name="i_f4">所在村居：</string>
    <string name="i_f5">详细地址：</string>
    <string name="i_f6">项目类型：</string>
    <string name="i_f7">初判地类：</string>
    <string name="i_f8">用地类型：</string>
    <string name="i_f9">用地现状：</string>
    <string name="i_f10">违法用地面积：</string>
    <string name="i_f11">备注：</string>
    <string name="i_f12">电话：</string>
    <string name="i_f13">地类：</string>
    <string name="i_f14">核查结果：</string>
    <string name="i_f15">成果说明：</string>
    <string name="i_f16">处理情况：</string>
    <string name="i_f17">制止通知书编号：</string>
    <string name="i_f18">下达日期：</string>
    <string name="i_f19">计划拆除时间：</string>
    <string name="i_f20">组织人数：</string>
    <string name="i_f21">拆除负责人：</string>
    <string name="i_f22">立案决定书文号：</string>
    <string name="i_f23">发文时间：</string>
    <string name="i_f24">核查结果：</string>
    <string name="i_f25">抽查结果：</string>
    <string name="i_f26">报告政府时间：</string>
    <string name="i_f27">转送时间：</string>
    <string name="v_f1">线索来源</string>
    <string name="v_f2">用地主体类别</string>
    <string name="v_f3">主体名称</string>
    <string name="v_f4">所在村居</string>
    <string name="v_f5">详细地址</string>
    <string name="v_f6">项目类型</string>
    <string name="v_f7">初判地类</string>
    <string name="v_f8">用地类型</string>
    <string name="v_f9">用地现状</string>
    <string name="v_f10">违法用地面积</string>
    <string name="v_f11">备注</string>
    <string name="v_f12">绘制红线</string>
    <string name="v_f13">查看红线</string>
    <string name="v_f14">第一次核查</string>
    <string name="v_f15">案件状态</string>
    <string name="v_f16">第一次处置</string>
    <string name="v_f17">电话</string>
    <string name="v_f18">地类</string>
    <string name="v_f19">核查结果</string>
    <string name="v_f20">备注</string>
    <string name="v_f21">核查人</string>
    <string name="v_f22">核查时间</string>
    <string name="v_f23">案件编号</string>
    <string name="v_f24">上报人</string>
    <string name="v_f25">上报时间</string>
    <string name="v_f26">处理情况</string>
    <string name="v_f27">制止通知书编号</string>
    <string name="v_f28">下达日期</string>
    <string name="v_f29">计划拆除时间</string>
    <string name="v_f30">组织人数</string>
    <string name="v_f31">拆除负责人</string>
    <string name="v_f32">立案决定书文号</string>
    <string name="v_f33">发文时间</string>
    <string name="v_f34">处理上报人员</string>
    <string name="v_f35">处理上报时间</string>
    <string name="v_f40">办理中</string>
    <string name="v_f41">已办结</string>
    <string name="v_f42">报告政府时间</string>
    <string name="v_f43">一张图分析结果</string>
    <string name="v_f44">占用耕地面积</string>
    <string name="f_f1">违法主体名称：%1$s</string>
    <string name="f_f2">所在村居：%1$s</string>
    <string name="f_f3">违法用地面积：%1$s</string>
    <string name="f_f4">案件状态：%1$s</string>
    <string name="f_f5">违建类型：%1$s</string>
    <string name="f_f6">签到时间：%1$s</string>
    <string name="f_f7">说明：%1$s</string>
    <string name="f_f8">原因：%1$s</string>
    <string name="f_f9">签到地点：%1$s</string>
    <string name="s_f1">签到类型：</string>
    <string name="s_f2">签到时间：</string>
    <string name="s_f3">坐标：</string>
    <string name="s_f4">行政区编码：</string>
    <string name="s_f5">签到地点：</string>
    <string name="s_f6">详细地址：</string>
    <string name="s_f7">说明：</string>
    <string name="s_f8">原因：</string>
    <string name="default_uri_app">http://112.111.45.108:8080/androidService/servlet</string>
    <string name="uri_app">http://112.111.45.108:8080/androidService/servlet</string>
    <string name="uri_statistics_land">http://112.111.45.108:8080/fjydzf/statistic/toMobileStatistic?username=chinadci</string>
    <string name="uri_statistics_mineral">http://112.111.45.108:8080/fjydzf/mobileStatistic/toMobileStatisticKc?username=chinadci</string>
    <string name="uri_law">http://112.111.45.108:8080/fjydzf/sysmanage/flfg?username=chinadci</string>
    <string name="uri_jctbUrl">http://112.111.45.108:8080/arcgis/rest/services/fjydzf/fjydzf_test/MapServer</string>
    <string name="uri_userupdate_service">UserUpdate</string>
    <string name="uri_login_service">Login</string>
    <string name="uri_admin_service">Administrative</string>
    <string name="uri_arguments_service">Parameters</string>
    <string name="uri_gps_service">UserGPS</string>
    <string name="uri_annex_service">Annex</string>
    <string name="uri_case_service">Case</string>
    <string name="uri_inspection_service">CaseCheck</string>
    <string name="uri_mineral_log">Mine</string>
    <string name="uri_casetrack_service">CaseParticulars</string>
    <string name="uri_mineraltrack_service">AlreadyDone</string>
    <string name="uri_patrol_signin">PatrolSignIn</string>
    <string name="uri_patrol_signin_new">PatrolSignInNew</string>
    <string name="uri_case_overseer">Overseer</string>
    <string name="uri_mineralhc_log">MineHC</string>
    <string name="uri_mapanalyze">GeographicAnalysis</string>
    <string name="uri_version">Version</string>
    <string name="uri_mapbag">Version?filetype=2</string>
    <string name="uri_response">QuickRespond</string>
    <string name="uri_update_password">User/Password</string>
    <string name="uri_getSumNum">SumNum</string>
    <string name="uri_getPreSubNum">PreSubNum</string>
    <string name="uri_getPreSubNum1">WpPreSubNum</string>
    <string name="uri_getSubNum">SubNum</string>
    <string name="uri_getSubNum1">WpSubNum</string>
    <string name="about_intr">福建省国土资源移动执法监察系统利用现代信息技术实现对土地利用和矿产勘查开发情况进行全面监管，及时发现、及时处理、有效遏制违法行为，充分保护耕地，为实现“天上看、地上查、网上管”的国土资源综合管理，全面提高国土资源管理与服务水平，为节约、集约利用土地和矿产资源、加强土地、矿产资源管理提供强有力的技术支撑和信息保障。</string>
    <string name="about_http">开发单位:广州城市信息研究所有限公司</string>
    <string name="about_copyright_cn">【福建省国土资源厅】 版权所有</string>
    <string name="about_copyright_en">Copyright © 2014\nAll Rights Reserved.</string>
</resources>