<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/activity_login_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing2x" >

        <TextView
            android:id="@+id/activity_passowrdupdate_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing2h"
            android:background="@drawable/bg_user_box"
            android:completionThreshold="1"
            android:ems="20"
            android:gravity="center_vertical"
            android:hint="@string/cn_typeaccount"
            android:paddingLeft="@dimen/spacing6x"
            android:paddingRight="@dimen/spacing"
            android:popupBackground="@drawable/bg_autotextview"
            android:singleLine="true"
            android:textSize="@dimen/fontsize_normal" />

        <EditText
            android:id="@+id/activity_passowrdupdate_curp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:background="@drawable/bg_password_box"
            android:ems="20"
            android:gravity="center_vertical"
            android:hint="@string/cn_type_curpassword"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/spacing6x"
            android:paddingRight="@dimen/spacing"
            android:singleLine="true"
            android:textSize="@dimen/fontsize_normal" >
        </EditText>

        <EditText
            android:id="@+id/activity_passowrdupdate_newfp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:background="@drawable/bg_password_box"
            android:ems="20"
            android:gravity="center_vertical"
            android:hint="@string/cn_type_newpassword"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/spacing6x"
            android:paddingRight="@dimen/spacing"
            android:singleLine="true"
            android:textSize="@dimen/fontsize_normal" >
        </EditText>

        <EditText
            android:id="@+id/activity_passowrdupdate_newtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:background="@drawable/bg_password_box"
            android:ems="20"
            android:gravity="center_vertical"
            android:hint="@string/cn_retype_newpassword"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/spacing6x"
            android:paddingRight="@dimen/spacing"
            android:singleLine="true"
            android:textSize="@dimen/fontsize_normal" >
        </EditText>

        <Button
            android:id="@+id/activity_passowrdupdate_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing2x"
            android:background="@drawable/bg_greenbutton"
            android:shadowColor="#349641"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/cn_modify"
            android:textSize="@dimen/fontsize_large" />
    </LinearLayout>

</RelativeLayout>