<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_overseer"
    android:orientation="vertical"
    android:padding="@dimen/spacing" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing4x"
        android:shrinkColumns="1"
        android:stretchColumns="1" >

        <TableRow android:paddingTop="@dimen/spacing2h" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:text="@string/i_f25"
                android:textColor="@color/black"
                android:textSize="@dimen/fontsize_normal" >
            </TextView>

            <RadioGroup
                android:id="@+id/fragment_mineral_log_edite_radio_g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_autotextview"
                android:gravity="center_vertical|left"
                android:orientation="horizontal"
                android:padding="@dimen/spacing" >

                <RadioButton
                    android:id="@+id/overseer_qualified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/ic_selected"
                    android:checked="true"
                    android:gravity="center"
                    android:paddingLeft="@dimen/spacing4x"
                    android:text="@string/conformit"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/overseer_unqualified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing2x"
                    android:button="@drawable/ic_selected"
                    android:gravity="center"
                    android:paddingLeft="@dimen/spacing4x"
                    android:text="@string/non_conformit"
                    android:textColor="@color/black" />
            </RadioGroup>
        </TableRow>

        <TableRow android:paddingTop="@dimen/spacing2h" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:text="@string/i_f11"
                android:textColor="@color/black"
                android:textSize="@dimen/fontsize_normal" >
            </TextView>

            <EditText
                android:id="@+id/overseer_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_autotextview"
                android:gravity="left|top"
                android:minLines="3"
                android:padding="@dimen/spacing"
                android:singleLine="false"
                android:textColor="@color/black"
                android:textSize="@dimen/fontsize_normal" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing2x"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/overseer_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_blue"
            android:paddingLeft="@dimen/spacing2x"
            android:paddingRight="@dimen/spacing2x"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/fontsize_normal" >
        </Button>

        <Button
            android:id="@+id/overseer_do"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/spacing2x"
            android:layout_weight="1"
            android:background="@drawable/bg_button_blue"
            android:paddingLeft="@dimen/spacing2x"
            android:paddingRight="@dimen/spacing2x"
            android:text="@string/report"
            android:textColor="@color/white"
            android:textSize="@dimen/fontsize_normal" >
        </Button>
    </LinearLayout>

</LinearLayout>